--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Statehela - Earn money online by performing simple tasks. Join our community today!">
   <meta name="keywords" content="Statehela, earn money online, online tasks, make money">
+  <!-- Open Graph  -->
+  <meta property="og:title" content="Statehela - Your Gateway To Online Earnings">
+  <meta property="og:description" content="Earn money online by performing simple tasks. Join our community today!">
+  <meta property="og:image" content="https://statehela-agencies.com/images/og2.jpg">
+  <meta property="og:url" content="https://statehela-agencies.com">
+  <meta property="og:type" content="website">
+  
   <title>Statehela - Your Gateway To Online Earnings</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="images/logo4.PNG">
 </head>
 <body>
   <!-- Top Navigation Bar -->
