--- a/legitimacy.html
+++ b/legitimacy.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Statehela - Earn money online by performing simple tasks. Join our community today!">
-  <meta name="keywords" content="Statehela, earn money online, online tasks, make money">
-  <title>Statehela - How It Works in Different Countries</title>
+ <meta name="description" content="Is Statehela legit? Yes! Statehela is a trusted platform, backed by a government registration certificate. Join thousands of satisfied users and start earning today.">
+  <meta name="keywords" content="Statehela, Is Statehela legit?, statehela legitimacy, earn money online, online tasks, make money">
+  <title>Statehela - Our Legitimacy and Reputation</title>
   <link rel="stylesheet" href="legitimacy.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
