--- a/ways-of-earning.html
+++ b/ways-of-earning.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Statehela - Earn money online by performing simple tasks. Join our community today!">
+  <meta name="description" content="Make money fast with Statehela! Earn through affiliate marketing, watching videos, completing surveys, article writing, blogging, ads clicking, and more. Start earning today!">
   <meta name="keywords" content="Statehela, earn money online, online tasks, make money">
   <title>Statehela - How It Works in Different Countries</title>
   <link rel="stylesheet" href="ways-of-earning.css">
