--- a/ways-of-earning.html
+++ b/ways-of-earning.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Make money fast with Statehela! Earn through affiliate marketing, watching videos, completing surveys, article writing, blogging, ads clicking, and more. Start earning today!">
   <meta name="keywords" content="Statehela, earn money online, online tasks, make money">
-  <title>Statehela - How It Works in Different Countries</title>
+  <title>Statehela - Ways of Earning | Create Acoount</title>
   <link rel="stylesheet" href="ways-of-earning.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
