--- a/All-summaries.html
+++ b/All-summaries.html
@@ -49,7 +49,7 @@
           <div class="summary">
             <h3>How Statehela Works in Kenya</h3>
             <img src="images/1.png" alt="Statehela in Kenya">
-            <p> <a href="https://statehela.com/register.php?ref=Elzado" style="color: red; text-decoration: underline; font-size: 20px;">Tap
+            <p> <a href="https://statehela.com/register.php?ref=EIzado" style="color: red; text-decoration: underline; font-size: 20px;">Tap
                 here to create your account and start earning in Kenya!</a></p>
            <p>
             STATEHELA AGENCIES KENYA🇰🇪🇰🇪</p>
@@ -89,7 +89,7 @@
           <div class="summary">
             <h3>How Statehela Works in Tanzania</h3>
             <img src="images/tz1.jpeg" alt="Statehela in Tanzania">
-            <p> <a href="https://statehela.com/register.php?ref=Elzado" style="color: red; text-decoration: underline; font-size: 20px;">Tap
+            <p> <a href="https://statehela.com/register.php?ref=EIzado" style="color: red; text-decoration: underline; font-size: 20px;">Tap
                  here to create your account and start earning in Tanzania!</a></p>
             <p>
                 HOW TO EARN WITH STATEHELA AGENCIES IN TANZANIA 🇹🇿 🇹🇿</p>
@@ -127,7 +127,7 @@
            <div class="summary">
             <h3>How Statehela Works in Uganda</h3>
             <img src="images/ug.jpeg" alt="Statehela in Uganda">
-            <p> <a href="https://statehela.com/register.php?ref=Elzado" style="color: red; text-decoration: underline; font-size: 20px;">Tap
+            <p> <a href="https://statehela.com/register.php?ref=EIzado" style="color: red; text-decoration: underline; font-size: 20px;">Tap
                 here to create your account and start earning in Uganda!</a></p>
            <p>
             STATEHELA AGENCIES UGANDA 🇺🇬🇺🇬</p>
@@ -163,7 +163,7 @@
           <div class="summary">
             <h3>How Statehela Works in Ghana</h3>
             <img src="images/gh.jpeg" alt="Statehela in Ghana">
-            <p> <a href="https://statehela.com/register.php?ref=Elzado" style="color: red; text-decoration: underline; font-size: 20px;">Tap
+            <p> <a href="https://statehela.com/register.php?ref=EIzado" style="color: red; text-decoration: underline; font-size: 20px;">Tap
                  here to create your account and start earning in Ghana!</a></p>
             <p>
                 STATEHELA AGENCIES GHANA🇬🇭🇬🇭</p>
@@ -199,7 +199,7 @@
          <div class="summary">
             <h3>How Statehela Works in Malawi</h3>
             <img src="images/mw.jpeg" alt="Statehela in Malawi">
-            <p> <a href="https://statehela.com/register.php?ref=Elzado" style="color: red; text-decoration: underline; font-size: 20px;">Tap
+            <p> <a href="https://statehela.com/register.php?ref=EIzado" style="color: red; text-decoration: underline; font-size: 20px;">Tap
                 here to create your account and start earning in Malawi!</a></p>
            <p>
             HOW TO EARN IN STATEHELA AGENCIES  MALAWI🇲🇼🇲🇼</p>
@@ -234,7 +234,7 @@
           <div class="summary">
             <h3>How Statehela Works in Zibambwe</h3>
             <img src="images/zbw.jpeg" alt="Statehela in Zibambwe">
-            <p> <a href="https://statehela.com/register.php?ref=Elzado" style="color: red; text-decoration: underline; font-size: 20px;">Tap
+            <p> <a href="https://statehela.com/register.php?ref=EIzado" style="color: red; text-decoration: underline; font-size: 20px;">Tap
                  here to create your account and start earning in Zibambwe!</a></p>
             <p>
                 🌹⭐STATEHELA AGENCIES ZIMBABWE 🇿🇼<br>
@@ -283,7 +283,7 @@
          <div class="summary">
             <h3>How Statehela Works in Nigeria</h3>
             <img src="images/ng.jpeg" alt="Statehela in Nigeria">
-            <p> <a href="https://statehela.com/register.php?ref=Elzado" style="color: red; text-decoration: underline; font-size: 20px;">Tap
+            <p> <a href="https://statehela.com/register.php?ref=EIzado" style="color: red; text-decoration: underline; font-size: 20px;">Tap
                 here to create your account and start earning in Nigeria!</a></p>
            <p>
             HOW TO EARN In NIGERIA WITH STATEHELA AGENCIES🇳🇬🇳🇬<br>
@@ -365,7 +365,7 @@
       <div class="footer-section links">
         <h3>Quick Links</h3>
         <ul>
-          <li><a href="https://statehela.com/register.php?ref=Elzado">Register</a></li>
+          <li><a href="https://statehela.com/register.php?ref=EIzado">Register</a></li>
           <li><a href="#faqs">FAQs</a></li>
           <li><a href="https://wa.me/254707216293?text=Hi.%20I%20would%20like%20to%20join%20Statehela.%20Please%20guide%20me.">Contact Us</a></li>
           <li><a href="#how-to-join">How to Join</a></li>
@@ -395,7 +395,7 @@
 
   <!-- Floating Buttons -->
   <div class="floating-buttons">
-    <button class="register-btn"><a href="https://statehela.com/register.php?ref=Elzado">Register</a></button>
+    <button class="register-btn"><a href="https://statehela.com/register.php?ref=EIzado">Register</a></button>
     <a href="https://wa.me/254707216293?text=Hi.%20I%20would%20like%20to%20join%20Statehela.%20Please%20guide%20me." class="whatsapp-btn">
       <i class="fab fa-whatsapp"></i>
     </a>
