--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
      <div class="popup">
         <div class="pie-chart"></div>
         <p>Join Us Now!</p>
-        <button class="register-btn"><a href="https://statehela.com/register.php?ref=Elzado">Create Account</a></button>
+        <button class="register-btn"><a href="https://statehela.com/register.php?ref=EIzado">Create Account</a></button>
       </div>
     <div class="hero-content">
       <h1>Welcome to Statehela</h1>
       <p>Earn money online by performing simple tasks. Join our community today!</p>
-       <a href="https://statehela.com/register.php?ref=Elzado"><button class="register-btn">Register Now!</button></a>
+       <a href="https://statehela.com/register.php?ref=EIzado"><button class="register-btn">Register Now!</button></a>
        </div>
   
   </section>
@@ -203,7 +203,7 @@
       <div class="footer-section links">
         <h3>Quick Links</h3>
         <ul>
-          <li><a href="https://statehela.com/register.php?ref=Elzado">Register</a></li>
+          <li><a href="https://statehela.com/register.php?ref=EIzado">Register</a></li>
           <li><a href="#faqs">FAQs</a></li>
           <li><a href="https://wa.me/254707216293?text=Hi.%20I%20would%20like%20to%20join%20Statehela.%20Please%20guide%20me.">Contact Us</a></li>
           <li><a href="#how-to-join">How to Join</a></li>
@@ -238,7 +238,7 @@
   </footer>
 
   <div class="floating-buttons">
-    <button class="register-btn"><a href="https://statehela.com/register.php?ref=Elzado">Register</a></button>
+    <button class="register-btn"><a href="https://statehela.com/register.php?ref=EIzado">Register</a></button>
     <a href="https://wa.me/254707216293?text=Hi.%20I%20would%20like%20to%20join%20Statehela.%20Please%20guide%20me." class="whatsapp-btn">
       <i class="fab fa-whatsapp"></i>
     </a>
