--- a/legitimacy.html
+++ b/legitimacy.html
@@ -35,7 +35,7 @@
 <div class="popup">
     <div class="pie-chart"></div>
     <p>Join Us Now!</p>
-    <button class="register-btn"><a href="https://statehela.com/register.php?ref=Elzado">CREATE ACCOUNT</a></button>
+    <button class="register-btn"><a href="https://statehela.com/register.php?ref=EIzado">CREATE ACCOUNT</a></button>
   </div>
   
 
@@ -170,7 +170,7 @@
 
   <!-- Floating Buttons -->
   <div class="floating-buttons">
-    <button class="register-btn"><a href="https://statehela.com/register.php?ref=Elzado">Register</a></button>
+    <button class="register-btn"><a href="https://statehela.com/register.php?ref=EIzado">Register</a></button>
     <a href="https://wa.me/254707216293?text=Hi.%20I%20would%20like%20to%20join%20Statehela.%20Please%20guide%20me." class="whatsapp-btn">
       <i class="fab fa-whatsapp"></i>
     </a>
