--- a/All-summaries.html
+++ b/All-summaries.html
@@ -35,7 +35,7 @@
 <div class="popup">
     <div class="pie-chart"></div>
     <p>Join Us Now!</p>
-    <button class="register-btn"><a href="https://statehela.com/register.php?ref=Elzado">Create Account</a></button>
+    <button class="register-btn"><a href="https://statehela.com/register.php?ref=EIzado">Create Account</a></button>
   </div>
   
 
