--- a/legitimacy.html
+++ b/legitimacy.html
@@ -87,7 +87,7 @@
         <!-- Registration Link -->
         <div class="legitimacy-content">
           <p>
-            Ready to join our community? Tap <a href="https://statehela.com/register.php?ref=Elzado" style="color: blue; text-transform: uppercase; text-decoration: underline; font-weight: bold;">here</a> to create your account and start earning today!
+            Ready to join our community? Tap <a href="https://statehela.com/register.php?ref=EIzado" style="color: blue; text-transform: uppercase; text-decoration: underline; font-weight: bold;">here</a> to create your account and start earning today!
           </p>
         </div>
       </div>
@@ -140,7 +140,7 @@
       <div class="footer-section links">
         <h3>Quick Links</h3>
         <ul>
-          <li><a href="https://statehela.com/register.php?ref=Elzado">Register</a></li>
+          <li><a href="https://statehela.com/register.php?ref=EIzado">Register</a></li>
           <li><a href="index.html#faqs">FAQs</a></li>
           <li><a href="https://wa.me/254707216293?text=Hi.%20I%20would%20like%20to%20join%20Statehela.%20Please%20guide%20me.">Contact Us</a></li>
           <li><a href="ways-of-earning.html#how-to-join">How to Join</a></li>
