--- a/ways-of-earning.html
+++ b/ways-of-earning.html
@@ -35,7 +35,7 @@
 <div class="popup">
     <div class="pie-chart"></div>
     <p>Join Us Now!</p>
-    <button class="register-btn"><a href="https://statehela.com/register.php?ref=Elzado">CREATE ACCOUNT</a></button>
+    <button class="register-btn"><a href="https://statehela.com/register.php?ref=EIzado">CREATE ACCOUNT</a></button>
   </div>
 
   <!-- All Summaries and Popular Posts Section -->
@@ -98,7 +98,7 @@
           <strong>Activation Fee:</strong> A small one-time fee,  <strong>depending on your country's currency</strong>, is required to activate your account and start earning.
         </p>
         <p>
-          Ready to start earning? Tap <a href="https://statehela.com/register.php?ref=Elzado" style="color: blue; text-transform: uppercase; text-decoration: underline; font-weight: bold;">here</a> to create your account and explore the ways to earn!
+          Ready to start earning? Tap <a href="https://statehela.com/register.php?ref=EIzado" style="color: blue; text-transform: uppercase; text-decoration: underline; font-weight: bold;">here</a> to create your account and explore the ways to earn!
         </p>
       </div>
   
@@ -110,7 +110,7 @@
         <p>
           Joining Statehela is quick and easy. Follow these simple steps to create your account and start earning:
           <ol>
-            <li><strong>Visit the Registration Page:</strong> Click <a href="https://statehela.com/register.php?ref=Elzado" style="color: blue; text-transform: uppercase; text-decoration: underline; font-weight: bold;"> here</a> to go to the registration page.</li>
+            <li><strong>Visit the Registration Page:</strong> Click <a href="https://statehela.com/register.php?ref=EIzado" style="color: blue; text-transform: uppercase; text-decoration: underline; font-weight: bold;"> here</a> to go to the registration page.</li>
             <li><strong>Fill in Your Details:</strong> Enter your name, email address, and create a password. Make sure to use accurate information.</li>
             <li><strong>Verify Your Email:</strong> Check your inbox for a verification email from Statehela and click the link to confirm your account.</li>
             <li><strong>Complete Your Profile:</strong> Add additional details to your profile, such as your country and preferred payment method.</li>
@@ -118,7 +118,7 @@
           </ol>
         </p>
         <p>
-          Don’t wait—tap <a href="https://statehela.com/register.php?ref=Elzado" style="color: blue; text-transform: uppercase; text-decoration: underline; font-weight: bold;">here</a> to create your account and start earning today!
+          Don’t wait—tap <a href="https://statehela.com/register.php?ref=EIzado" style="color: blue; text-transform: uppercase; text-decoration: underline; font-weight: bold;">here</a> to create your account and start earning today!
         </p>
       </div>
        </section>
@@ -172,7 +172,7 @@
       <div class="footer-section links">
         <h3>Quick Links</h3>
         <ul>
-          <li><a href="https://statehela.com/register.php?ref=Elzado">Register</a></li>
+          <li><a href="https://statehela.com/register.php?ref=EIzado">Register</a></li>
           <li><a href="#faqs">FAQs</a></li>
           <li><a href="https://wa.me/254707216293?text=Hi.%20I%20would%20like%20to%20join%20Statehela.%20Please%20guide%20me.">Contact Us</a></li>
           <li><a href="#how-to-join">How to Join</a></li>
@@ -202,7 +202,7 @@
 
   <!-- Floating Buttons -->
   <div class="floating-buttons">
-    <button class="register-btn"><a href="https://statehela.com/register.php?ref=Elzado">Register</a></button>
+    <button class="register-btn"><a href="https://statehela.com/register.php?ref=EIzado">Register</a></button>
     <a href="https://wa.me/254707216293?text=Hi.%20I%20would%20like%20to%20join%20Statehela.%20Please%20guide%20me." class="whatsapp-btn">
       <i class="fab fa-whatsapp"></i>
     </a>
